# ramp64-convert-gui

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: app.rs  lib.rs  main.rs  widgets.rs
src/app/: actions.rs  error_list.rs  file_groups.rs  help.rs  options.rs  work.rs
src/app/file_groups/: group_item.rs
src/widgets/: browser.rs  item_list.rs
