[package]
name = "ramp64-convert-gui"
description = "A simple GUI for ra_mp64_srm_convert"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
version = "1.0.0"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/drehren/ramp64-convert-gui"
repository = "https://github.com/drehren/ramp64-convert-gui"
keywords = ["gui", "util", "retroarch", "save"]
license = "MIT"

[dependencies]
eframe = { version = "0.21", default-features = false, features = [
  "default_fonts",
  "glow",
] }
egui = "0.21"
open = "4.0.1"
paste = "1.0.12"
ramp64-srm-convert-lib = { path = "../ra_mp64_srm_convert/ramp64-srm-convert-lib", version = "0.4" }
rfd = { version = "0.11", default-features = false, features = ["gtk3"] }

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
