[package]
name = "ramp64-convert-gui"
description = "A simple GUI for ra_mp64_srm_convert"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
version = "1.1.1"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/drehren/ramp64-convert-gui"
repository = "https://github.com/drehren/ramp64-convert-gui"
keywords = ["gui", "util", "retroarch", "save"]
license = "MIT"

[dependencies]
eframe = { version = "0.23", default-features = false, features = [
  "default_fonts",
  "glow",
] }
egui = "0.23"
open = "5.0"
paste = "1.0.12"
ramp64-srm-convert-lib = "0.5"
rfd = { version = "0.12", default-features = false, features = ["gtk3"] }

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

# Change this flat to allow compilation for linux target
[target.x86_64-unknown-linux-musl]
rustflags = "-C target-feature=-crt-static"
