[package]
name = "ramp64-convert-gui"
description = "A simple GUI for ra_mp64_srm_convert"
include = ["src/**/*", "Cargo.toml", "LICENSE", "README.md"]
version = "1.1.1"
authors = ["Daniel Rehren <daniel.rehren.a@gmail.com>"]
edition = "2021"
readme = "README.md"
homepage = "https://github.com/drehren/ramp64-convert-gui"
repository = "https://github.com/drehren/ramp64-convert-gui"
keywords = ["gui", "util", "retroarch", "save"]
license = "MIT"
resolver = "2"

[dependencies]
eframe = { version = "0.23", default-features = false, features = [
  "default_fonts",
  "glow",
] }
egui = "0.23"
open = "5.0"
paste = "1.0.12"
ramp64-srm-convert-lib = "0.5"

[target.'cfg(target_env = "musl")'.dependencies]
rfd = { version = "0.12", default-features = false, features = [ "xdg-portal" ] }

[target.'cfg(not(target_env = "musl"))'.dependencies]
rfd = { version = "0.12", default-features = false, features = [ "gtk3" ] }

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

